--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <name>PlatformoClient</name>
+    <description>A tool to collect webserver response time.</description>
+    <url>http://xiangyang.li/project/platformo-client-java/</url>
+
+    <developers>
+        <developer>
+            <name>Shawn Li</name>
+            <email>shawn@xiangyang.li</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:backav/platformo-client-java.git</connection>
+        <developerConnection>scm:git:git@github.com:backav/platformo-client-java.git</developerConnection>
+        <url>git@github.com:backav/platformo-client-java.git</url>
+    </scm>
+
     <groupId>li.xiangyang.platformo</groupId>
     <artifactId>client</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -21,23 +38,6 @@
             <version>1.2.22</version>
         </dependency>
     </dependencies>
-
-    <name>PlatformoClient</name>
-    <description>A tool to collect webserver response time.</description>
-    <url>http://xiangyang.li/project/platformo-client-java/</url>
-
-    <developers>
-        <developer>
-            <name>Shawn Li</name>
-            <email>shawn@xiangyang.li</email>
-        </developer>
-    </developers>
-
-    <scm>
-        <connection>scm:git:git@github.com:backav/platformo-client-java.git</connection>
-        <developerConnection>scm:git:git@github.com:backav/platformo-client-java.git</developerConnection>
-        <url>git@github.com:backav/platformo-client-java.git</url>
-    </scm>
 
     <profiles>
         <profile>
@@ -76,9 +76,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.5</version>
                         <executions>
                             <execution>
+                                <id>sign-artifacts</id>
                                 <phase>verify</phase>
                                 <goals>
                                     <goal>sign</goal>
